--- a/Source/BillysCaravanFormation/BillysCaravanFormation.csproj
+++ b/Source/BillysCaravanFormation/BillysCaravanFormation.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CaravanFormation.cs" />
+    <Compile Include="CaravanModInit.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
